--- a/CS2040C Debug Examples/CS2040C Debug Examples.vcxproj.filters
+++ b/CS2040C Debug Examples/CS2040C Debug Examples.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LinkedList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
